--- a/climate_starter-Copy1.ipynb
+++ b/climate_starter-Copy1.ipynb
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -999,13 +999,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('USC00516128', 0.6709090909090909),\n",
+       " ('USC00519281', 0.6345454545454544),\n",
+       " ('USC00513117', 0.22545454545454546),\n",
+       " ('USC00514830', 0.12285714285714286),\n",
+       " ('USC00519523', 0.08099999999999999),\n",
+       " ('USC00519397', 0.028181818181818186),\n",
+       " ('USC00517948', 0.0)]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate the total amount of rainfall per weather station for your trip dates using the previous year's matching dates.\n",
     "# Sort this in descending order by precipitation amount and list the station, name, latitude, longitude, and elevation\n",
-    "\n"
+    "start_date_dt = dt.datetime.strptime(tripStartDate, '%Y-%m-%d')\n",
+    "end_date_dt = dt.datetime.strptime(tripEndDate, '%Y-%m-%d')\n",
+    "\n",
+    "session.query(Measurement.station, \n",
+    "              func.avg(Measurement.prcp)). \\\n",
+    "            filter(Measurement.date.between(start_date_dt, end_date_dt)). \\\n",
+    "            group_by(Measurement.station). \\\n",
+    "            order_by(func.avg(Measurement.prcp).desc()).all()\n"
    ]
   },
   {
@@ -1017,20 +1041,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(62.0, 69.15384615384616, 77.0)]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a query that will calculate the daily normals \n",
     "# (i.e. the averages for tmin, tmax, and tavg for all historic data matching a specific month and day)\n",
@@ -1054,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
